# netlink-packet-route

./: .gitignore  .rustfmt.toml  CHANGELOG  Cargo.toml  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: build.yml  clippy-rustfmt.yml  license.yml  main.yml  msrv.yml
benches/: link_message.rs  rtnetlink_dump.rs
examples/: dump_neighbour_tables.rs  dump_neighbours.rs  dump_packet_link_bridge_vlan.rs  dump_packet_links.rs  dump_routes.rs  dump_rules.rs  new_route.rs  new_rule.rs
examples/freebsd/: ffi.rs  mod.rs
src/: address_family.rs  address_family_fallback.rs  address_family_freebsd.rs  address_family_linux.rs  buffer_freebsd.rs  enc.rs  ip.rs  lib.rs  message.rs  tests.rs
src/address/: addr_flags.rs  addr_scope.rs  attribute.rs  cache_info.rs  error.rs  freebsd.rs  message.rs  mod.rs
src/link/: attribute.rs  buffer_tool.rs  devlink_port.rs  down_reason.rs  dpll_pin.rs  event.rs  ext_mask.rs  freebsd.rs  header.rs  link_flag.rs  link_layer_type.rs  link_mode.rs  link_state.rs  map.rs  message.rs  mod.rs  phys_id.rs  prop_list.rs  stats.rs  stats64.rs  vlan_protocol.rs  wireless.rs  xdp.rs
src/neighbour/: address.rs  attribute.rs  cache_info.rs  error.rs  flags.rs  freebsd.rs  header.rs  kind.rs  message.rs  mod.rs  state.rs
src/neighbour_table/: attribute.rs  config.rs  error.rs  header.rs  message.rs  mod.rs  param.rs  stats.rs  tests.rs
src/net/: arp.rs  ethernet.rs  icmpv4.rs  icmpv6.rs  mod.rs  mpls.rs  vxlan.rs
src/nexthop/: attribute.rs  buffer.rs  flags.rs  group.rs  header.rs  message.rs  mod.rs
src/nsid/: attribute.rs  error.rs  header.rs  message.rs  mod.rs  tests.rs
src/prefix/: attribute.rs  cache_info.rs  error.rs  header.rs  message.rs  mod.rs  tests.rs
src/route/: address.rs  attribute.rs  cache_info.rs  error.rs  flags.rs  freebsd.rs  header.rs  ip.rs  lwtunnel.rs  message.rs  metrics.rs  mfc_stats.rs  mod.rs  mpls.rs  next_hops.rs  preference.rs  realm.rs  seg6.rs  seg6local.rs  via.rs
src/rtnl/: buffer.rs  constants.rs  message.rs  mod.rs  test.rs
src/rule/: action.rs  attribute.rs  error.rs  flags.rs  header.rs  message.rs  mod.rs  port_range.rs  uid_range.rs
src/stats/: attribute.rs  header.rs  message.rs  mod.rs  tests.rs  xstats.rs
src/tc/: attribute.rs  error.rs  header.rs  (+3 more)
tools/: make_release.sh  nl_dump.py  test_cross_build.sh
(+281 files in other folders)
