[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-route"
version = "0.22.0"
edition = "2021"

homepage = "https://github.com/rust-netlink/netlink-packet-route"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-route"
description = "netlink packet types"

[features]
rich_nlas = []

[dependencies]
bitflags = "2"
byteorder = "1.3.2"
libc = "0.2.66"
log = { version = "0.4.20", features = ["std"] }
netlink-packet-core = { git = "https://github.com/rust-netlink/netlink-packet-core.git", rev = "01e8dd1" }
netlink-packet-utils = { version = "0.6.0" }

[[example]]
name = "dump_packet_links"

[dev-dependencies]
netlink-sys = { version = "0.8.5" }
pretty_assertions = "0.7.2"
