[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-route"
version = "0.28.0"
edition = "2021"
rust-version = "1.77"
homepage = "https://github.com/rust-netlink/netlink-packet-route"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-route"
description = "netlink packet types"

[features]
rich_nlas = []

[dependencies]
bitflags = "2"
libc = "0.2.66"
log = { version = "0.4.20", features = ["std"] }
netlink-packet-core = { version = "0.8.0" }

[[example]]
name = "dump_packet_links"

[dev-dependencies]
pretty_assertions = "0.7.2"

[target.'cfg(not(target_os = "freebsd"))'.dev-dependencies]
netlink-sys = { version = "0.8.5" }